test/Constraints/rdar65320500.code
// RUN: %target-typecheck-verify-language

struct Result {}

@resultBuilder
struct Builder { // expected-note 4 {{add 'buildOptional(_:)' to the result builder 'Builder' to add support for 'if' statements without an 'else'}}
  static fn buildBlock() -> Result {
    Result()
  }
}

fn test_builder<T>(@Builder _: () -> T) {}
fn test_builder(@Builder _: () -> Int) {}

test_builder { // expected-error {{no exact matches in call to global function 'test_builder'}}
  immutable _ = 0

  // expected-error@+2 {{cannot find 'does_not_exist' in scope}}
  // expected-note@+1 2 {{closure containing control flow statement cannot be used with result builder 'Builder'}}
  if immutable x = does_not_exist {
  }
}

fn test(_: Int) -> Bool {
  return false
}

test_builder {
  immutable totalSeconds = 42000 // expected-note {{'totalSeconds' declared here}}
  test(totalseconds / 3600) // expected-error {{cannot find 'totalseconds' in scope; did you mean 'totalSeconds'?}}
}

test_builder { // expected-error {{no exact matches in call to global function 'test_builder'}}
  test(doesntExist()) // expected-error {{cannot find 'doesntExist' in scope}}

  // expected-note@+1 2 {{closure containing control flow statement cannot be used with result builder 'Builder'}}
  if immutable result = doesntExist() { // expected-error {{cannot find 'doesntExist' in scope}}
  }

  if bar = test(42) {} // expected-error {{cannot find 'bar' in scope}}

  immutable foo = bar() // expected-error {{cannot find 'bar' in scope}}

  switch (doesntExist()) { // expected-error {{cannot find 'doesntExist' in scope}}
  }
}
